<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/textoDecomisar"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_cliente" />

        <EditText
            android:id="@+id/editTextNombreCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/textViewCustid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/texto_custid" />

        <EditText
            android:id="@+id/editTextCustid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/textoDatosCobrador"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoCobrador" />

        <EditText
            android:id="@+id/idCobrador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoNombreCobrador" />

        <EditText
            android:id="@+id/nombreCobrador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/textoDatosDecomiso"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoFechaDecomiso" />

                <TextView
                    android:id="@+id/fechaDecomiso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoEmbarque" />

                <TextView
                    android:id="@+id/embarque"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoClaveArt" />

                <TextView
                    android:id="@+id/claveArt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoNoSerie" />

                <TextView
                    android:id="@+id/noSerie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoFechaCompra" />

                <TextView
                    android:id="@+id/fechaCompra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoTienda" />

                <TextView
                    android:id="@+id/siteID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoBodega" />

                <TextView
                    android:id="@+id/bodega"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoArt" />

        <EditText
            android:id="@+id/descrArt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:enabled="true"
            android:inputType="text" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleserie"
            />

        <EditText
            android:id="@+id/txtSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textoDetalles" />

        <EditText
            android:id="@+id/detallesArt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.03"
            android:ems="10"
            android:enabled="true"
            android:inputType="textMultiLine"
            android:lines="12"
            android:maxLength="540"
            android:maxLines="12"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textViewFuncionamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Funcionamiento:" />

        <EditText
            android:id="@+id/editTextFuncionamiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="540"
            android:maxLines="12" />

        <TextView
            android:id="@+id/textViewAccesorios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Accesorios:" />

        <EditText
            android:id="@+id/editTextAccesorios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxLength="540"
            android:maxLines="12" />

        <Button
            android:id="@+id/btnTomaFoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonFoto" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/selftest" />

        <Button
            android:id="@+id/buttonDecomisar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/buttonDecomisar" />

    </LinearLayout>

</ScrollView>