<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:src="@mipmap/cobmovil"
        android:contentDescription="@string/login_imagen" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_usuario"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0101DF" />

    <EditText
        android:id="@+id/Inicio_txt_usr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text|textCapSentences"
        android:textColor="#000000" >

        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0101DF" />

    <EditText
        android:id="@+id/Inicio_txt_PWD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#000000"/>

    <Button
        android:id="@+id/Inicio_btn_Entrar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#0101DF"
        android:textColor="#F5F6CE"
        android:layout_margin="9dp"
        android:text="@string/login_aceptar" />

    <Button
        android:id="@+id/Inicio_btn_DescargaBD"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#2E9AFE"
        android:textColor="#F5F6CE"
        android:text="@string/login_descargar" />

    <TextView
        android:id="@+id/txt_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#0101DF"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout>