<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtVw_titu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/titleConvenio"
            android:textColor="@color/blue"
            android:textSize="@dimen/titulo" />

        <View
            android:id="@+id/View01"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/blue2" />

        <TextView
            android:id="@+id/txt_custidConv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:text="TextView" />

        <TextView
            android:id="@+id/txt_pm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:text="TextView" />

        <TextView
            android:id="@+id/txtOpc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleopcion1" />

        <TextView
            android:id="@+id/txtOpc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleopcion2" />

        <View
            android:id="@+id/view1"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/blue2" />
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Opción 1" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Opción 2" />
        </RadioGroup>
        <View
            android:id="@+id/view2"
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="@color/blue2" />
    </LinearLayout>

</ScrollView>